Fixing invisible story while dragging in FF
Actually the story is not invisible, but it has an offset, when the scroll position != top

Fix was: http://forum.jquery.com/topic/sortable-offset-when-element-is-dragged-and-page-scrolled-down-ff

--- a/assets/stylesheets/master_backlog.css
+++ b/assets/stylesheets/master_backlog.css
@@ -1,5 +1,4 @@
 #rb #backlogs_container {
-  position:relative;
   width:100%;
   min-width: 950px;
 }
@@ -28,7 +27,6 @@
   border: 1px solid #E4E4E4;
   display: block;
   margin: 0 0 10px 0;
-  position: relative;
   width: 100%;
 }
 
